--- a/week10/LearningStorage.html
+++ b/week10/LearningStorage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+<h1>Open Console</h1>
 <body>
 
     <script>// Store data
